<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
                android:id="@+id/lblSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site_id" />

        <EditText
                android:id="@+id/txtSite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/site_code_for_the_visit"
                android:inputType="text"
                android:lineSpacingExtra="10sp"
                android:textColorHint="#546E7A"
                android:importantForAutofill="no" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="date" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time" />

        <EditText
            android:id="@+id/txtStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="datetime|time" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time" />

        <EditText
            android:id="@+id/txtEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="datetime|time" />
     </TableRow>

</TableLayout>